2008-02-23  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelopNUnit.addin.xml, Services/TestProgressMonitor.cs,
	  Services/NUnitService.cs, Gui/TestResultsPad.cs, Gui/TestPad.cs,
	  Gui/CircleImage.cs: Worked on nunit pad

2008-02-20  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.NUnit.mdp, Makefile.am: Fix references.
	* MonoDevelopNUnit.addin.xml, Services/NUnitService.cs: Register nunit
	  packages using the extension point, instead of doing it by conde in the
	  nunit service (since that code won't be run unless the service is
	  explicitely loaded). Fixes bug #

2008-02-20  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/NUnitAssemblyGroupNodeBuilder.cs, Gui/TestAssemblyNodeBuilder.cs:
	  Handle the delete key in TreeViewPad, so it will work event if the
	  shortcut is not defined.

2008-02-06  Mike Krüger <mkrueger@novell.com> 

	* Gui/TestPad.cs: Some changes for the new TreeViePiye

2008-02-05  Lluis Sanchez Gual <lluis@novell.com> 

	* templates/NUnitProject.xpt.xml: Fix nunit versions referenced in the
	  project.

2008-02-04  Lluis Sanchez Gual <lluis@novell.com> 

	* templates/NUnitProject.xpt.xml: Don't try to open Test.cs, since it wont
	  work for languages other than c#. Fixes bug #358359.

2008-01-25  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelopNUnit.addin.xml: Update MD version.

2008-01-23  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/NUnitOptionsPanel.cs: Ensure we don't create subclasses of classes
	  with private fields bound by glade#. It would not work due to bug
	  355228.

2008-01-15  Michael Hutchinson <mhutchinson@novell.com> 

	* templates/NUnitTestClass.xft.xml, templates/NUnitAssemblyGroup.xpt.xml,
	  templates/NUnitProject.xpt.xml: Make template categories translatable.

2008-01-09  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/TestPad.cs: Add null check when filling data for selected node. Should
	  fix bug #350518.

2007-12-12  Lluis Sanchez Gual <lluis@novell.com> 
